Day2/wordpress/wordpress-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: wordpress
    weight: null
